# MIDIDiff

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  setup_cli_package.py
.github/: copilot-instructions.md
.github/workflows/: README.md  release.yml  test.yml
docs/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  testing.rst  usage.rst
midi_diff/: __init__.py  cli.py  core.py  midi_utils.py
midi_diff/cli/: __init__.py  __main__.py  clipboard.py  commands.py  completions.py  debug.py  main.py  parser.py  version.py
