[project]
name = "midi-diff"
version = "1.0.0"
description = "Output the differences between two MIDI files, using the command-line."
license = {text = "MIT"}
authors = [
    {name = "Taylor-Jayde Blackstone",email = "t.blackstone@inspyre.tech"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "mido (>=1.3.3,<2.0.0)"
]

[project.optional-dependencies]
cli = [
    "rich (>=13.0.0,<14.0.0)"
]

[project.scripts]
midi-diff = "midi_diff.cli:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
